--- a/src/frontend/components/welcome.scss
+++ b/src/frontend/components/welcome.scss
@@ -41,8 +41,7 @@ $break-mobile: 411px;
     justify-content: space-evenly;
   }
   @media screen and (max-width: $break-800) {
-    width: 80%;
-    margin: 0 80% 40% 0;
+    margin: 10% 0 0 0;
   }
   @media screen and (max-width: $break-mobile) {
     margin: 0 0 40% 0;
@@ -66,6 +65,9 @@ $break-mobile: 411px;
   margin: 25% 30% 0 0;
   @media screen and (max-width: $break-1000) {
     margin: 24% 0 0 5%;
+  }
+  @media screen and (max-width: $break-800) {
+    margin: 24% 0 0 1%;
   }
   @media screen and (max-width: $break-mobile) {
     margin: 0 0 35% 10%;
