--- a/src/frontend/components/welcome.scss
+++ b/src/frontend/components/welcome.scss
@@ -69,6 +69,10 @@ $break-mobile: 411px;
   @media screen and (max-width: $break-800) {
     margin: 24% 0 0 1%;
   }
+  @media screen and (max-width: $break-500) {
+    margin: 35% 0 0 0;
+    width: 95%;
+  }
   @media screen and (max-width: $break-mobile) {
     margin: 0 0 35% 10%;
   }
