--- a/src/frontend/components/welcome.scss
+++ b/src/frontend/components/welcome.scss
@@ -44,7 +44,7 @@ $break-mobile: 411px;
     margin: 10% 0 0 0;
   }
   @media screen and (max-width: $break-mobile) {
-    margin: 0 0 40% 0;
+    margin: 5% 0 0 20%;
   }
 }
 
@@ -74,6 +74,7 @@ $break-mobile: 411px;
     width: 95%;
   }
   @media screen and (max-width: $break-mobile) {
-    margin: 0 0 35% 10%;
+    margin: 25% 0 0 42%;
+    width: 50%;
   }
 }
